[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 448.0
margin_top = 15.0
margin_right = 813.0
margin_bottom = 63.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 266.0
margin_top = 12.0
margin_right = 399.0
margin_bottom = 68.0
text = "Mostrar na tela"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 284.0
margin_top = 113.0
margin_right = 419.0
margin_bottom = 167.0

[node name="Button2" type="Button" parent="."]
margin_left = 443.0
margin_top = 113.0
margin_right = 547.0
margin_bottom = 167.0
text = "Adicionar"

[node name="Label4" type="Label" parent="."]
margin_left = 575.0
margin_top = 120.0
margin_right = 712.0
margin_bottom = 161.0

[node name="Button3" type="Button" parent="."]
margin_left = 292.0
margin_top = 249.0
margin_right = 422.0
margin_bottom = 319.0
text = "Clique aqui!"

[node name="Label6" type="Label" parent="."]
margin_left = 448.0
margin_top = 259.0
margin_right = 638.0
margin_bottom = 316.0
align = 1
valign = 1

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 311.0
margin_top = 429.0
margin_right = 449.0
margin_bottom = 490.0

[node name="Button4" type="Button" parent="."]
margin_left = 470.0
margin_top = 431.0
margin_right = 579.0
margin_bottom = 492.0
text = "Mostrar"

[node name="Label8" type="Label" parent="."]
margin_left = 600.0
margin_top = 435.0
margin_right = 714.0
margin_bottom = 491.0
